--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Imposter Q — Party Game</title>
+<title>That one whos the imposter game | Pennbrenn.com</title>
 <style>
   :root {
     --bg: #0b0f14;
