--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Imposter Q — Party Game</title>
+<title>That one who has a diffrent queston imposter game | PennBrennFun </title>
+<meta name="description" content="Both phrase and number questons. Who has a diffrent question?">
+<link rel="icon" href="play.png" type="image/png">
 <style>
   :root {
     --bg: #0b0f14;
