--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div style="margin-top:16px">
         <button id="startBtn">Start Game</button>
       </div>
-      <p class="note">Make sure <code>questions.json</code> is in the same folder as this file.</p>
+      <p class="note">Each player gets a question, they will answer it in their head. Pass the device around.<br>When everyone gets their queston, they will go around answering.<br>When the group finds out who had the fake queston, everyone will say their queston.<br>A moderator can view the question once everyone got their queston.</p>
     </section>
 
     <!-- Player Phase -->
