--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div style="margin-top:16px">
         <button id="startBtn">Start Game</button>
       </div>
-      <p class="note">Each player gets a question, they will answer it in their head. Pass the device around.<br>When everyone gets their queston, they will go around answering.<br>When the group finds out who had the fake queston, everyone will say their queston.<br>A moderator can view the question once everyone got their queston.</p>
+      <p class="note">Each player gets a question, they will answer it in their head. Pass the device around.<br>When everyone gets their queston, they will go around answering.<br><b>DO NOT TALK UNTIL AFTER THE REAL QUESTON IS SAID</b><br>Then the real queston is said. People may begin guessing who is the imposter now.<br><b>Justify your answer even if youre the imposter.</b><br>When the group finds out who had the fake queston, everyone will say their queston.<br>A moderator can view the question once everyone got their queston.</p>
     </section>
 
     <!-- Player Phase -->
