--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Imposter Q — Party Game</title>
+<title>That one who has a diffrent queston imposter game | PennBrennFun</title>
+<link rel="icon" type="image/png" href="play.png">
 <style>
   :root {
     --bg: #0b0f14;
@@ -84,7 +85,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>Imposter Q</h1>
+    <h1>That one who has a diffrent queston imposter game | PennBrennFun</h1>
     <p class="lead">
       Each player gets a question and answers it in their head.<br>
       Pass the device around.<br><br>
