--- a/index.html
+++ b/index.html
@@ -162,65 +162,66 @@
 const data = {
   number: [
     { real: "What should the age of consent be changed to", imposter: "What is the age school got hard" },
-    { real: "How many friends do you have", imposter: "What should the age of consent be changed to" }
-    { real: "What age would did school get hard", imposter: "What age is best for a first kiss" }
-    { real: "What is one of your worst grades", imposter: "What is your grade in your best class" }
-    { real: "What is the age that a person becomes unattractive to you", imposter: "What age is a good age for death" }
-    { real: "How many friends do you have", imposter: "How many people could you kill right now" }
-    { real: "What age should people be able to drive", imposter: "What age is good for a first job" }
-    { real: "How many people did you kill", imposter: "Pick a number 0-2" }
-    { real: "What should the age of consent be changed to", imposter: "Pick any number (lower is better)" }
-    { real: "What is a good amount of times to masturbate a week", imposter: "How many times do you piss a week" }
-    { real: "Quick! Guess the answer: 1293*5238", imposter: "How much money is livable wage (say a number, NOT SIX FIGURES OR SIMALAR)" }
-    { real: "How much money would you suck a dick for (don't say infinite or no)", imposter: "How much money would you crack for (dont say infinite or no)" }
-    { real: "How many spoons to drink a glass of water", imposter: "You are the imposter, pick a number (hint: How many spoons to drink...)" }
-    { real: "What time is good for gooning", imposter: "What time do you go to bed" }
-    { real: "At what age do you think you would want to have sex", imposter: "Pick a number under 50" }
-    { real: "What should minimum wage be", imposter: "About how many coins have you picked up in your life" }
-    { real: "About what is the value of the most expensive thing you've held", imposter: "How much do you think a 2009 toyoa camry costs" }
-    { real: "About how many books have you read", imposter: "When will you die" }
+    { real: "How many friends do you have", imposter: "What should the age of consent be changed to" },
+    { real: "What age would did school get hard", imposter: "What age is best for a first kiss" },
+    { real: "What is one of your worst grades", imposter: "What is your grade in your best class" },
+    { real: "What is the age that a person becomes unattractive to you", imposter: "What age is a good age for death" },
+    { real: "How many friends do you have", imposter: "How many people could you kill right now" },
+    { real: "What age should people be able to drive", imposter: "What age is good for a first job" },
+    { real: "How many people did you kill", imposter: "Pick a number 0-2" },
+    { real: "What should the age of consent be changed to", imposter: "Pick any number (lower is better)" },
+    { real: "What is a good amount of times to masturbate a week", imposter: "How many times do you piss a week" },
+    { real: "Quick! Guess the answer: 1293*5238", imposter: "How much money is livable wage (say a number, NOT SIX FIGURES OR SIMALAR)" },
+    { real: "How much money would you suck a dick for (dont say infinite or no)", imposter: "How much money would you crack for (dont say infinite or no)" },
+    { real: "How many spoons to drink a glass of water", imposter: "You are the imposter, pick a number (hint: How many spoons to drink...)" },
+    { real: "What time is good for gooning", imposter: "What time do you go to bed" },
+    { real: "At what age do you think you would want to have sex", imposter: "Pick a number under 50" },
+    { real: "What should minimum wage be", imposter: "About how many coins have you picked up in your life" },
+    { real: "About what is the value of the most expensive thing youve held", imposter: "How much do you think a 2009 toyota camry costs" },
+    { real: "About how many books have you read", imposter: "When will you die" },
     { real: "How many times have you scrolled past something that turned you on", imposter: "How often do you get in a car in a week" }
   ],
   answer: [
     { real: "What is the best spot to sit in the class", imposter: "Where does the teachers pet sit" },
-    { real: "What is a reason to kill yourself", imposter: "What makes you want to jerk off" }
-    { real: "What is your least favorite class", imposter: "What is the most fun class this year" }
-    { real: "If there was a fire, what would you save first", imposter: "What is your favorite food" }
-    { real: "What is the best thing you've ever eaten", imposter: "What is your favorite farm animal" }
-    { real: "What is the gayest thing a person can do without being gay", imposter: "What is the freakiest thing you saw someone do" }
-    { real: "What is the worst thing you saw while scrolling", imposter: "What is the most brainrotted thing you saw while scrolling" }
-    { real: "What is the weirdest kink you've heard of", imposter: "What is the most justifiable kink you know" }
-    { real: "What are you gonna do in a active shooting", imposter: "Where would you hide to escape a rapist in school" }
-    { real: "Whats your favorite candy", imposter: "What is the worst candy ever" }
-    { real: "What is your favorite color that isn't well known (eg brownish-red, maroon", imposter: "What shade do you not want your shit to be" }
-    { real: "What is the worst candy ever", imposter: "What's your favorite candy" }
-    { real: "Whats your favorite place to doomscroll", imposter: "What's your favorite place to goon" }
-    { real: "Whats your favorite place to eat dinner", imposter: "What's your favorite place to sit" }
-    { real: "Where would you wanna die", imposter: "What's your favorite place to jerk off" }
-    { real: "Explain how red feels to you (Don't say the color)", imposter: "Explain how blue feels to you (Don't say the color)" }
-    { real: "Explain how pink feels to you (Don't say the color)", imposter: "Explain how black feels to you (Don't say the color)" }
-    { real: "Explain how black feels to you (Don't say the color)", imposter: "Explain how white feels to you (Don't say the color)" }
-    { real: "If it was 2001, where would you want to be when the towers fell", imposter: "What class would you want to skip" }
-    { real: "Name a underrated car", imposter: "Name a really really bad car" }
-    { real: "Whats the best way to die", imposter: "What is the most gruesome car crash you can imagine (come up with a fake scenario)" }
-    { real: "Name a underrated food", imposter: "Name a " }
-    { real: "Name a really good candy", imposter: "Name a " }
-    { real: "Name a element", imposter: "Pick one: Rhedynium, Hexium, Yelium, Partnium" }
-    { real: "Name something edible", imposter: "Name a school supply you always carry" }
-    { real: "Name your favorite show", imposter: "Name the first show you remember watching" }
-    { real: "Name a lighting technology: (eg. Filament, LED, ect.", imposter: "Name a way to light a home that isn't common." }
-    { real: "Whats your favorite car (If you dont know say a brand)", imposter: "Whats the worst car (If you don't know say a brand)" }
-    { real: "What is your favorite game", imposter: "Name a freaky game" }
-    { real: "What is the best spot in school", imposter: "Where would you plant a bomb in school" }
-    { real: "Where is the worst place to be in an earthquake", imposter: "Where are you going to be in about a hour" }
-    { real: "Best sex position", imposter: "Name an object that sounds like a sex position" }
-    { real: "What is the best meme ever", imposter: "What is the last meme you saw" }
-    { real: "Make a shitty joke", imposter: "Make the gayest joke ever" }
-    { real: "What is the most valuable thing you've held", imposter: "Name something expensive" }
-    { real: "Name the last video you remember watching (can be porn)", imposter: "Make a name for a porn video" }
-    { real: "What is the weirdest thing someone probably shoved up their ass", imposter: "name something long and hard that isn't a cock" }
+    { real: "What is a reason to kill yourself", imposter: "What makes you want to jerk off" },
+    { real: "What is your least favorite class", imposter: "What is the most fun class this year" },
+    { real: "If there was a fire, what would you save first", imposter: "What is your favorite food" },
+    { real: "What is the best thing youve ever eaten", imposter: "What is your favorite farm animal" },
+    { real: "What is the gayest thing a person can do without being gay", imposter: "What is the freakiest thing you saw someone do" },
+    { real: "What is the worst thing you saw while scrolling", imposter: "What is the most brainrotted thing you saw while scrolling" },
+    { real: "What is the weirdest kink youve heard of", imposter: "What is the most justifiable kink you know" },
+    { real: "What are you gonna do in a active shooting", imposter: "Where would you hide to escape a rapist in school" },
+    { real: "Whats your favorite candy", imposter: "What is the worst candy ever" },
+    { real: "What is your favorite color that isnt well known (eg brownish-red, maroon", imposter: "What shade do you not want your shit to be" },
+    { real: "What is the worst candy ever", imposter: "Whats your favorite candy" },
+    { real: "Whats your favorite place to doomscroll", imposter: "Whats your favorite place to goon" },
+    { real: "Whats your favorite place to eat dinner", imposter: "Whats your favorite place to sit" },
+    { real: "Where would you wanna die", imposter: "Whats your favorite place to jerk off" },
+    { real: "Explain how red feels to you (Dont say the color)", imposter: "Explain how blue feels to you (Dont say the color)" },
+    { real: "Explain how pink feels to you (Dont say the color)", imposter: "Explain how black feels to you (Dont say the color)" },
+    { real: "Explain how black feels to you (Dont say the color)", imposter: "Explain how white feels to you (Dont say the color)" },
+    { real: "If it was 2001, where would you want to be when the towers fell", imposter: "What class would you want to skip" },
+    { real: "Name a underrated car", imposter: "Name a really really bad car" },
+    { real: "Whats the best way to die", imposter: "What is the most gruesome car crash you can imagine (come up with a fake scenario)" },
+    { real: "Name a underrated food", imposter: "Name a " },
+    { real: "Name a really good candy", imposter: "Name a " },
+    { real: "Name a element", imposter: "Pick one: Rhedynium, Hexium, Yelium, Partnium" },
+    { real: "Name something edible", imposter: "Name a school supply you always carry" },
+    { real: "Name your favorite show", imposter: "Name the first show you remember watching" },
+    { real: "Name a lighting technology: (eg. Filament, LED, ect.", imposter: "Name a way to light a home that isnt common." },
+    { real: "Whats your favorite car (If you dont know say a brand)", imposter: "Whats the worst car (If you dont know say a brand)" },
+    { real: "What is your favorite game", imposter: "Name a freaky game" },
+    { real: "What is the best spot in school", imposter: "Where would you plant a bomb in school" },
+    { real: "Where is the worst place to be in an earthquake", imposter: "Where are you going to be in about a hour" },
+    { real: "Best sex position", imposter: "Name an object that sounds like a sex position" },
+    { real: "What is the best meme ever", imposter: "What is the last meme you saw" },
+    { real: "Make a shitty joke", imposter: "Make the gayest joke ever" },
+    { real: "What is the most valuable thing youve held", imposter: "Name something expensive" },
+    { real: "Name the last video you remember watching (can be porn)", imposter: "Make a name for a porn video" },
+    { real: "What is the weirdest thing someone probably shoved up their ass", imposter: "name something long and hard that isnt a cock" }
   ]
 };
+
 
 // -----------------------------
 // Game logic
