--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>That one who has a diffrent queston imposter game | PennBrennFun</h1>
+    <h1>Who has a diffrent queston? | PennBrennFun</h1>
     <p class="lead">
       Each player gets a question and answers it in their head.<br>
       Pass the device around.<br><br>
